--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit
 pandas
-rdkit
 xgboost
 scikit-learn
 fpdf
 pubchempy
 chembl_webresource_client
 matplotlib
+# RDKit: uniquement sur Anaconda, Docker, ou local avec installation spéciale
+# rdkit
